[package]
name = "pixel_convert"
version = "0.2.0"
edition = "2021"

[lib]
name = "pixel_convert"
crate-type = ["cdylib"]

[features]
# Enable Python extension linking behavior by default
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]

[dependencies]
pixel_convert_rust = { path = "../pixel_convert_rust" }
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py39"] }
image = "0.24"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"
