[package]
name = "pixel_convert_rust"
version = "0.2.0"
edition = "2021"

# Core library only; Python bindings live in a sibling crate
[lib]
name = "pixel_convert_rust"
crate-type = ["rlib"]

[[bin]]
name = "pixel_convert"
path = "src/main.rs"

[dependencies]
image = "0.24"
palette = { version = "0.7", features = ["std"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1"
thiserror = "1"
parking_lot = "0.12"
num_cpus = "1.16"
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
codegen-units = 1
lto = "thin"
